--- a/formulas/formulas-8.html
+++ b/formulas/formulas-8.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
+
     <title>Time Value of Money - Part 1</title>
 </head>
 
 <body>
     <div class="container-fluid">
+
+
 
         <div id="" class="slide">
             <div class="row slide-title">
@@ -30,40 +33,23 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principles needed to follow along with the derivation of the equation.</p>
-
-                        <p>If we combine our previous equations into one equation it looks like this:</p>
-                        <div><span class="math">\(100(1+.10)(1+.10)=121\)</span></div>
-                        <p>We can simplify the equation to this:
-                            <div><span class="math">\(100(1+.10)^2=121\)</span></div>
-                        </p>
-
-                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. This is the basic TVM equation.</p>
-                        <div>
-                            <span class="math">\(FV=PV(1+i)^n\)</span>
-                        </div>
-
-
-
+                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route! If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables.</p>
                     </div>
                 </div>
             </div>
-            <!-- to math refresher -->
             <div class="row">
                 <div class="col-1">
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-5.html">Back</a>
-                    <a type="button" class="btn" href="basics-7.html">Continue</a>
+                    <!-- needs a help button  -->
+                    <a type="button" class="btn" href="basics-7.html">Back</a>
+                    <a type="button" class="btn" href="basics-9.html">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">9</div>
-                </div>
-            </div>
+
         </div>
+
 
 
     </div> <!--  end of container -->
@@ -77,7 +63,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
