--- a/formulas/formulas10a-19.html
+++ b/formulas/formulas10a-19.html
@@ -15,7 +15,9 @@
 <body>
     <div class="container-fluid">
 
-        <div id="" class="slide">
+
+        <!--  problem 12 answer -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -31,8 +33,15 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Congratulations!</h3>
-                        <p>You’ve completed the TVM Basics Tutorial. If you were confident answering the exercise questions and got most of them right, then you have a good grasp of the basics of TVM. If you were not able to answer most of the exercise questions correctly, contact your instructor for additional help. Feel free to go through this tutorial as many times as needed to help you with the concepts.</p>
+                        <h4>Exercise 12: Solution</h4>
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <div class="math">
+                            = ?<br>
+                            = 20000<br>
+                            = 7% &xrarr; 0.07<br>
+                            = 18
+                        </div>
                     </div>
                 </div>
             </div>
@@ -48,6 +57,8 @@
 
         </div>
 
+
+
     </div> <!--  end of container -->
 
 
@@ -59,7 +70,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
