--- a/formulas/formulas-10.html
+++ b/formulas/formulas-10.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,16 +15,16 @@
 <body>
     <div class="container-fluid">
 
-        <!--   problem 5 answer -->
-        <div id="" class="slide exercise-slide">
+
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <!-- <h3 class="secondary-title">Exercises</h3> -->
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,25 +32,22 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 5: Solution</h4>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = ?<br>
-                            Future Value (FV) = 1000<br>
-                            i = 0.12<br>
-                            n = 20</p>
-
-                        <p>Plug the numbers into the equation:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            Future Value (FV) = Present Value (PV)(1 + i)<sup>n</sup><br>
-                            1000</span class> = Present Value (PV)(1 + 0.12)<sup>20</sup><br>
-                            1000 = Present Value (PV)(1.12)<sup>20</sup><br>
-                            1000</span clas> = Present Value (PV)(9.64629309)<br>
-                            1000</span clas> / 9.64629309 = Present Value (PV)<br>
-                            <b>Present Value (PV) = $103.67</b>
+                        <h3>Solve the Equation</h3>
+                        <hr>
+                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
+                        <p class="answer">The answer is 11.612%.</p>
+                        <h5>Steps for solving the sample equation.</h5>
+                        <p>Even though not all the numbers are listed in the problem, we can identify the time frame. Identifying FV and PV might be difficult since they aren't explicitly stated, however we know our future value will be 3 times our current value. This means we can use any current value for our calculation. To make it easy, use $1. This means our future value would be $3.</p>
+                        <p>Remember: To find the reciprocal, turn the number into a fraction and then flip it over:
+                            <span class="math" style="font-size: 1.5em;">\(10=\frac{10}{1}\nearrow\frac{1}{10}\)</span>
                         </p>
+                        <p>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.</p>
+                        <div><img class="math" src="../../images/variables2.svg"></div>
+                        <p>Next, plug the numbers into the equation:</p>
+                        <div><img class="math" src="../../images/replace-the-variables2.svg"></div>
+                        <p>Then solve for the unknown variable, which is interest (i) in this problem.</p>
+                        <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent for now, because of the unknown variable.</p>
+
                     </div>
                 </div>
             </div>
@@ -59,12 +56,13 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="basics-9.html">Back</a>
+                    <a type="button" class="btn" href="basics-11.html">Continue</a>
                 </div>
             </div>
 
         </div>
+
 
 
     </div> <!--  end of container -->
@@ -78,7 +76,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
