--- a/formulas/formulas-6.html
+++ b/formulas/formulas-6.html
@@ -7,66 +7,62 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
-
+    <link rel="stylesheet" href="../tvm-styles.css">
     <title>Time Value of Money - Part 1</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!-- problem 8  -->
-
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <!-- <h3 class="secondary-title">Exercises</h3> -->
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
+                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principles needed to follow along with the derivation of the equation.</p>
 
-                        <h4>Exercise 8: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex8" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex8" type="number"><br>
-                                </form>
-                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex8"></div>
+                        <p>If we combine our previous equations into one equation it looks like this:</p>
+                        <div><span class="math">\(100(1+.10)(1+.10)=121\)</span></div>
+                        <p>We can simplify the equation to this:
+                            <div><span class="math">\(100(1+.10)^2=121\)</span></div>
+                        </p>
+
+                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. This is the basic TVM equation.</p>
+                        <div>
+                            <span class="math">\(FV=PV(1+i)^n\)</span>
                         </div>
+
+
+
                     </div>
                 </div>
             </div>
+            <!-- to math refresher -->
             <div class="row">
                 <div class="col-1">
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="basics-5.html">Back</a>
+                    <a type="button" class="btn" href="basics-7.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">9</div>
+                </div>
+            </div>
         </div>
 
 
@@ -81,7 +77,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
