--- a/formulas/formulas11-20.html
+++ b/formulas/formulas11-20.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 9  -->
+        <!-- problem 13  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,19 +33,20 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
+                        <h4>Exercise 13: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
+
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>n </label>
-                                    <input id="yrs-ex9" type="number"><br>
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex13" type="number"><br>
                                 </form>
-                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_13()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex9"></div>
+                            <div class="answer" id="answer-ex13"></div>
                         </div>
                     </div>
                 </div>
@@ -74,7 +75,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
