--- a/formulas/formulas11a-21.html
+++ b/formulas/formulas11a-21.html
@@ -15,8 +15,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!--  problem 9 answer -->
+        <!--  problem 13 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,16 +32,19 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 9: Solution</h4>
-                        <p>At a rate of 12% annual interest, how long would it take for an amount to double? Like one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV) to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
+                        <h4>Exercise 13: Solution</h4>
+                        <p class="questions">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <p>Variables:</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = 12% &xrarr; .12<br>
-                            n = ?</p>
-                        <p>Then plug the numbers into the equation.</p>
-                        <p class="math"><img src="./images/tvm1_question4.png" class="img-fluid " alt=""></p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            = ?<br>
+                            = 20000<br>
+                            = 7% &xrarr; 0.07<br>
+                            = 18</p>
+                        <p>Then plug the numbers into the equation:</p>
+                        <div class="math">
+                            <img src="./images/tvm1_question12.png" class="img-fluid " alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -70,7 +72,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
