--- a/formulas/formulas5-8.html
+++ b/formulas/formulas5-8.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 8 answer -->
+
+        <!-- problem 5 -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,24 +25,29 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 8: Solution</h4>
-                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
-                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = 12% &xrarr; .12<br>
-                            n = ?
-                        </p>
+
+                        <h4>Exercise 5: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable from the previous exercise.</p>
+                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond (assume annual compounding/discounting)</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label>Present Value (PV) </label>
+                                    <input id="Present Value (PV)alue-ex5" type="number"><br>
+                                </form>
+                                <button onclick="exercise_5()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex5"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -58,7 +64,6 @@
         </div>
 
 
-
     </div> <!--  end of container -->
 
 
@@ -70,7 +75,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
