--- a/formulas/formulas6a-11.html
+++ b/formulas/formulas6a-11.html
@@ -15,8 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 4 -->
-
+        <!--   problem 6 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,35 +24,25 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
+                        <h4>Exercise 6: Solution</h4>
+                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
+                        The problem states that we want to double the investment, which means Future Value (FV) will be twice the amount of Present Value (PV). You can use any numbers, as long as you maintain as the Future Value (FV) to Present Value (PV) ratio, which is 2:1. However, to cut out the need to simplify the math later, it’s best to start with Future Value (FV) = 2 and Present Value (PV) = 1.
+                        <p>Variables:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = ?<br>
+                            n = 10
+                        </p>
 
-                        <h4>Exercise 4: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex4" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex4" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex4" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex4" type="number"><br>
-                                </form>
-                                <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex4"></div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -81,7 +70,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
