--- a/formulas/formulas8-14.html
+++ b/formulas/formulas8-14.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 13 answer -->
+        <!-- problem 8  -->
+
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,18 +33,26 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 13: Solution</h4>
-                        <p class="questions">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            = ?<br>
-                            = 20000<br>
-                            = 7% &xrarr; 0.07<br>
-                            = 18</p>
-                        <p>Then plug the numbers into the equation:</p>
-                        <div class="math">
-                            <img src="./images/tvm1_question12.png" class="img-fluid " alt="">
+
+                        <h4>Exercise 8: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label>Present Value (PV) </label>
+                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex8" type="number"><br>
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex8" type="number"><br>
+                                </form>
+                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex8"></div>
                         </div>
                     </div>
                 </div>
@@ -72,7 +81,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
