--- a/formulas/formulas8a-15.html
+++ b/formulas/formulas8a-15.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!--   problem 6 answer -->
+        <!--  problem 8 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,17 +32,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 6: Solution</h4>
-                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
-                        The problem states that we want to double the investment, which means Future Value (FV) will be twice the amount of Present Value (PV). You can use any numbers, as long as you maintain as the Future Value (FV) to Present Value (PV) ratio, which is 2:1. However, to cut out the need to simplify the math later, it’s best to start with Future Value (FV) = 2 and Present Value (PV) = 1.
-                        <p>Variables:</p>
+                        <h4>Exercise 8: Solution</h4>
+                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 1<br>
+                        <p class="math">
+                            Present Value (PV) = 1<br>
                             Future Value (FV) = 2<br>
-                            i = ?<br>
-                            n = 10
+                            i = 12% &xrarr; .12<br>
+                            n = ?
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -59,6 +58,7 @@
         </div>
 
 
+
     </div> <!--  end of container -->
 
 
@@ -70,7 +70,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
