--- a/formulas/formulas9-16.html
+++ b/formulas/formulas9-16.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 15  -->
+        <!-- problem 9  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,21 +33,19 @@
                 <div class="col-12">
                     <div class="content">
 
-
-                        <h4>Exercise 15: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
-
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
+                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex15" type="number"><br>
+                                    <label>n </label>
+                                    <input id="yrs-ex9" type="number"><br>
                                 </form>
-                                <button onclick="exercise_15()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex15"></div>
+                            <div class="answer" id="answer-ex9"></div>
                         </div>
                     </div>
                 </div>
@@ -76,7 +74,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
