--- a/formulas/formulas9a-17.html
+++ b/formulas/formulas9a-17.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
 
-        <!-- problem 6  -->
+        <!--  problem 9 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,27 +33,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 6: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
-                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex6" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex6" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex6" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex6" type="number"><br>
-                                </form>
-                                <button onclick="exercise_6()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex6"></div>
-                        </div>
+                        <h4>Exercise 9: Solution</h4>
+                        <p>At a rate of 12% annual interest, how long would it take for an amount to double? Like one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV) to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = 12% &xrarr; .12<br>
+                            n = ?</p>
+                        <p>Then plug the numbers into the equation.</p>
+                        <p class="math"><img src="./images/tvm1_question4.png" class="img-fluid " alt=""></p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                     </div>
                 </div>
             </div>
@@ -81,7 +70,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="formulas-script.js"></script>
 </body>
 
 </html>
