updated event listener to jquery document.on and class rather than id

--- a/basic-concepts/basics-6.html
+++ b/basic-concepts/basics-6.html
@@ -44,12 +44,12 @@
                                     <input id="PV" type="number" placeholder="0"><br>
 
                                     <label style="margin-left: 58px;">Interest (i) </label>
-                                    <input id="i" type="number" placeholder="0"><br>
+                                    <input id="i" type="number" placeholder="0">%<br>
 
                                     <label style="margin-left: 73px">Time (n) </label>
                                     <input id="n" type="number" placeholder="0"><br>
 
-                                    <button id="exFV" type="button" class="btn calculate-btn">Calculate</button>
+                                    <button id="FV1" type="button" class="btn calculate-btn">Calculate</button>
                                 </form>
                             </div>
                             <div class="answer" id="answer"></div>
