--- a/formulas/formulas-4.html
+++ b/formulas/formulas-4.html
@@ -19,12 +19,12 @@
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h2 class="primary-title">TVM: Formulas</h2>
+                    <!-- <h3 class="secondary-title">Sample Problems</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,11 +32,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Solve the Equation</h3>
+                        <h4>Solve the Equation for Present Value (PV)</h4>
                         <hr>
-                        <h5>Steps for solving the sample equation.</h5>
                         <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
                         <p class="answer">The answer is $100.</p>
+                        <h5>Steps for solving the sample equation.</h5>
                         <p>Follow the same pattern we used to solve our first problem.</p>
                         <ul>
                             <li>First, identify the variables in the problem.</li>
@@ -90,8 +90,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-8.html">Back</a>
-                    <a type="button" class="btn" href="basics-10.html">Continue</a>
+                    <a type="button" class="btn" href="formulas-3.html">Back</a>
+                    <a type="button" class="btn" href="formulas-5.html">Continue</a>
                 </div>
             </div>
 
