--- a/formulas/formulas-5.html
+++ b/formulas/formulas-5.html
@@ -19,12 +19,12 @@
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h2 class="primary-title">TVM: Formulas</h2>
+                    <!-- <h3 class="secondary-title">Sample Problems</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Solve the Equation</h3>
+                        <h3>Solve the Equation for Interest (i)</h3>
                         <hr>
                         <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
                         <p class="answer">The answer is 11.612%.</p>
@@ -41,12 +41,15 @@
                         <p>Remember: To find the reciprocal, turn the number into a fraction and then flip it over:
                             <span class="math" style="font-size: 1.5em;">\(10=\frac{10}{1}\nearrow\frac{1}{10}\)</span>
                         </p>
-                        <p>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.</p>
-                        <div><img class="math" src="../../images/variables2.svg"></div>
-                        <p>Next, plug the numbers into the equation:</p>
-                        <div><img class="math" src="../../images/replace-the-variables2.svg"></div>
-                        <p>Then solve for the unknown variable, which is interest (i) in this problem.</p>
-                        <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent for now, because of the unknown variable.</p>
+                        <ul>
+                            <li>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.
+                                <div><span class="math">\(PV=1\)<br>\(FV=3\)<br>\(i=?\)<br>\(n=10\)</span></div>
+                            </li>
+                            <li>Next, plug the numbers into the equation:
+                            <div><span class="math">\(FV=PV(1+i)^n\longrightarrow3=1(1+i)^{10}\)</span></div></li>
+                            <li>Then solve for the unknown variable, which is interest (i) in this problem.</li>
+                            <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent for now, because of the unknown variable.</p>
+                        </ul>
 
                     </div>
                 </div>
@@ -56,8 +59,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-9.html">Back</a>
-                    <a type="button" class="btn" href="basics-11.html">Continue</a>
+                    <a type="button" class="btn" href="formulas-4.html">Back</a>
+                    <a type="button" class="btn" href="formulas-6.html">Continue</a>
                 </div>
             </div>
 
