--- a/basic-concepts/basics-7.html
+++ b/basic-concepts/basics-7.html
@@ -40,13 +40,13 @@
                                     <input id="PV" type="number" placeholder="0"><br>
 
                                     <label style="margin-left: 58px;">Interest (i) </label>
-                                    <input id="i" type="number" placeholder="0"><br>
+                                    <input id="i" type="number" placeholder="0">%<br>
 
                                     <label style="margin-left: 73px">Time (n) </label>
                                     <input id="n" type="number" placeholder="0"><br>
 
                                 </form>
-                                <button id="exFV" type="button" class="btn calculate-btn">Calculate</button>
+                                <button id="FV2" type="button" class="btn calculate-btn">Calculate</button>
                             </div>
                             <br>
                             <div class="answer" id="answer"></div>
