--- a/formulas/formulas-1.html
+++ b/formulas/formulas-1.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
-
     <title>Time Value of Money - Part 1</title>
 </head>
 
@@ -18,41 +17,49 @@
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h2 class="primary-title">TVM: Formulas</h2>
+                    <!-- <h3 class="secondary-title">TVM Equation</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>So far we have calculated FV with the TVM equation. Another way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it. Feel free to click on the Financial Calculator links and test an online calculator.</p>
-                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
-                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
-                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
-                        <p class="text-center">
-                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
+                        <h2>The TVM Equation</h2>
+                        <p>Previously, we found Future Value (FV) for each individual year and added it back to the principal. Although this does work, it would be time consuming if you were calculating the Future Value (FV) for 10 years. We can derive a general equation that will allow you to <em>solve for any of the variables</em>: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n).</p>
+                        <p>Here are the equations from the previous sample exercises:
+                            <ul>
+                                <li style="list-style: none; margin: -20px -10px; padding: 0;">Year 1:<span class="math">\(100\times0.10=10\)</span></li>
+                                <li style="list-style: none; margin: -20px -10px; padding: 0;">Year 2:<span class="math">\(110\times0.10=11\)</span></li>
+                                <li style="list-style: none; margin: -20px -10px; padding: 0;">Total after 2 years:<span class="math">\(100+10+11=121\)</span></li>
+                            </ul>
                         </p>
+                        <br>
+                        <p>If we combine our previous equations into one equation it looks like this: <span class="math">\(100(1+.10)(1+.10)=121\)</span></p>
+                        <p>Then simplify the equation to this: <span class="math">\(100(1+.10)^2=121\)</span></p>
+                        <p>Finally, replace the numbers with variables so we can use the equation with any numbers. This is the basic TVM equation.</p>
+                        <div>
+                            <span class="math" style="font-size: 1.5em;">\(FV=PV(1+i)^n\)</span>
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-1">
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-6.html">Back</a>
-                    <a type="button" class="btn" href="basics-8.html">Continue</a>
+                    <a type="button" class="btn hide" href="">Back</a>
+                    <a type="button" class="btn" href="formulas-2.html">Continue</a>
                 </div>
             </div>
-
         </div>
-
 
 
     </div> <!--  end of container -->
