--- a/formulas/formulas-6.html
+++ b/formulas/formulas-6.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
+
     <title>Time Value of Money - Part 1</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <div id="" class="slide">
+
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h2 class="primary-title">TVM: Formulas</h2>
+                    <!-- <h3 class="secondary-title">Sample Problems</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -30,40 +32,64 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principles needed to follow along with the derivation of the equation.</p>
+                        <h3>Solve the Equation for Time (n)</h3>
+                        <hr>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+                        <p class="answer">The answer is 4.7 years.</p>
+                        <h5>Steps for solving the sample equation.</h5>
+                        <ul>
+                            <li>First, identify the variables in the problem.
+                                <div>
+                                    <span class="math">\(PV = 1000\)<br>
+                                        \(FV = 1500\)<br>
+                                        \(i = 9%\) or \(0.09\)<br>
+                                        \(n = ?\)</span>
+                                </div>
+                            </li>
+                            <li>Next, plug the numbers you've identified into the equation.
+                                <div><span class="math">\(FV = PV(1 + i)^n\) <b>&nbsp;&xrarr;&nbsp;</b> \(1500=1000(1 + 0.09)^n\)</span></div>
+                            </li>
 
-                        <p>If we combine our previous equations into one equation it looks like this:</p>
-                        <div><span class="math">\(100(1+.10)(1+.10)=121\)</span></div>
-                        <p>We can simplify the equation to this:
-                            <div><span class="math">\(100(1+.10)^2=121\)</span></div>
-                        </p>
-
-                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. This is the basic TVM equation.</p>
-                        <div>
-                            <span class="math">\(FV=PV(1+i)^n\)</span>
-                        </div>
-
-
-
+                            <li>Now solve for the unknown variable. <span class="note">Remember PEMDAS.</span> </li>
+                            <ul>
+                                <li>Add the numbers in the parentheses.<br>
+                                    <span class="math">\(1500 = 1000(1.09)^n\)</span>
+                                </li>
+                                <li>Isolate the parentheses by dividing each side by 1000. Then convert the fraction on the left side of the equal sign to a decimal.
+                                    <div>
+                                        <span class="math" style="font-size: 1.5em;">\(\frac{1500}{1000}=\frac{1000(1+0.09)^n}{1000}\)</span>
+                                    </div>
+                                    <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                                </li>
+                                <li><b>E</b>: Many people will get stuck here. To manipulate an unknown exponent, take the natural log (ln) of each side. ln is a button on your calculator. Pay attention to what happens to the exponent n.
+                                    <div class="math">
+                                        <b>ln 1.5 = n(ln 1.09)</b>
+                                    </div>
+                                    <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                                </li>
+                                <li><b>MD</b>: To isolate n, divide both sides by (ln 1.09). Then solve for n.
+                                    <div class="bottom-space">
+                                        <img src="../images/tvm1_basic_n_example_help4.png" class="img-fluid " alt="">
+                                    </div>
+                                    <div><img class="math" src="../../images/exponent-step.svg"></div>
+                                </li>
+                            </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <!-- to math refresher -->
             <div class="row">
                 <div class="col-1">
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-5.html">Back</a>
-                    <a type="button" class="btn" href="basics-7.html">Continue</a>
+                    <a type="button" class="btn" href="formulas-5.html">Back</a>
+                    <a type="button" class="btn" href="formulas-7.html">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">9</div>
-                </div>
-            </div>
+
         </div>
+
 
 
     </div> <!--  end of container -->
