--- a/formulas/formulas12-22.html
+++ b/formulas/formulas12-22.html
@@ -19,7 +19,7 @@
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h2 class="primary-title">TVM: Formulas</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
