--- a/formulas/formulas14-26.html
+++ b/formulas/formulas14-26.html
@@ -18,7 +18,7 @@
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h2 class="primary-title">TVM: Formulas</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
